--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.3",
+    "i": "^0.3.7",
+    "npm": "^10.8.2",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
-    "react-native-svg": "^15.4.0"
+    "react-native-svg": "^15.4.0",
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,7 +40,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
