--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
