--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@supabase/supabase-js": "^2.45.0",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "axios": "^1.7.3",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "i": "^0.3.7",
     "npm": "^10.8.2",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-gesture-handler": "^2.18.1",
@@ -24,6 +29,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
