--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "axios": "^1.7.3",
     "deprecated-react-native-prop-types": "^5.0.0",
     "i": "^0.3.7",
+    "lottie-react-native": "^6.7.2",
     "npm": "^10.8.2",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
     "react-native-select-dropdown": "^4.0.1",
