--- a/ios/CampingNativeApp/Info.plist
+++ b/ios/CampingNativeApp/Info.plist
@@ -37,10 +37,15 @@
         <key>NSExceptionAllowsInsecureHTTPLoads</key>
         <true/>
       </dict>
+			<key>apis.data.go.kr</key>
+			<dict>
+        <key>NSExceptionAllowsInsecureHTTPLoads</key>
+        <true/>
+      </dict>
     </dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>앱 사용 중 위치 접근이 필요합니다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
