--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "zustand": "^4.5.4"
   },
