--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0",
     "zustand": "^4.5.4"
   },
