--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -32,7 +33,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
