--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-reanimated": "^3.15.4",
+    "react-native-reanimated-carousel": "^4.0.0-canary.16",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
     "react-native-select-dropdown": "^4.0.1",
