--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
