--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ yarn-error.log
 !.yarn/versions
 
 package-lock.json
+
+# Android 관련 파일 무시 추가
+android/app/src/main/AndroidManifest.xml
+android/app/src/main/res/values/strings.xml
