--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ package-lock.json
 # Android 관련 파일 무시 추가
 android/app/src/main/AndroidManifest.xml
 android/app/src/main/res/values/strings.xml
+android/app/google
+
+# firebase
+google-services.json
